avec navigation a , href , ...

--- a/tp/index.html
+++ b/tp/index.html
@@ -4,6 +4,20 @@
  <title>index</title>
 </head>
 <body>
-   Bienvenue dans la formation HTML5 / CSS3
+   <h1>Bienvenue dans la formation <i>HTML5</i> / CSS3</h1>  
+   <h2>sous titre</h2>
+   <p> ligne1 du paragraphe <br/> ligne2 du pragraphe </p>
+    
+   <a href="contact.html"> contact </a>	<br/>
+   <a href="http://www.m2iformation.fr" target="_blank"> M2i formation </a>	<br/>
+   
+   <h2>principales couleurs</h2>
+   <ul>
+		<li>rouge</li>	
+		<li>vert</li>	
+		<li>bleu</li>
+		<!-- commentaire au sein d'une page html -->
+   </ul>
+   
 </body>
 </html>
