--- a/tp/contact.html
+++ b/tp/contact.html
@@ -7,7 +7,7 @@
    page contact
    <ul>
      <li><a href="index.html">retour index</a></li>
-     <li><a href="#milieu">vers milieu</a></li>
+     <li><a href="#milieu">vers milieu , &eacute;</a></li>
      <li><a href="#fin">vers fin</a></li>
    </ul>
    <p>...</p> <p>...</p>  <p>...</p><p>...</p>  <p>...</p>
