--- a/tp/index.html
+++ b/tp/index.html
@@ -9,6 +9,7 @@
    <p> ligne1 du paragraphe <br/> ligne2 du pragraphe </p>
     
    <a href="contact.html"> contact </a>	<br/>
+   <a href="tableau.html"> tableau </a>	<br/>
    <a href="http://www.m2iformation.fr" target="_blank"> M2i formation </a>	<br/>
    
    <h2>principales couleurs</h2>
