--- a/tp/index.html
+++ b/tp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
  <title>index</title>
+ <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
    <h1>Bienvenue dans la formation <i>HTML5</i> / CSS3</h1>  
