--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -17,8 +17,11 @@
 	  </tbody>
    </table>
    <hr/>
-   <img src="image1.jpg" alt="texte alternatif image1" title="image1" />
+   <img src="images/image1.jpg" alt="texte alternatif image1" 
+        title="image1" />
    <hr/>
-   <img src="image1.jpg" width="50px" height="50px" />
+   <img src="images/image1.jpg" width="50px" height="50px" />
+   <hr/>
+   <img src="images/scene.svg" />
 </body>
 </html>
