avec div , span

--- a/tp/index.html
+++ b/tp/index.html
@@ -12,14 +12,18 @@
    <a href="contact.html"> contact </a>	<br/>
    <a href="tableau.html"> tableau </a>	<br/>
    <a href="http://www.m2iformation.fr" target="_blank"> M2i formation </a>	<br/>
-   
-   <h2>principales couleurs</h2>
-   <ul>
-		<li>rouge</li>	
-		<li>vert</li>	
-		<li>bleu</li>
-		<!-- commentaire au sein d'une page html -->
-   </ul>
+   <div style="font-weight:bold">
+	   <h2>principales couleurs</h2>
+	   <ul>
+			<li>rouge</li>	
+			<li>vert</li>	
+			<li>bleu</li>
+			<!-- commentaire au sein d'une page html -->
+	   </ul>
+   </div>
+   <hr/>
+   <div style="color:red;font-style:italic">divA</div><div>divB</div>
+   <span>spanA</span><span style="color:green" >spanB</span>
    
 </body>
 </html>
