--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -23,5 +23,11 @@
    <img src="images/image1.jpg" width="50px" height="50px" />
    <hr/>
    <img src="images/scene.svg" />
+   <pre>
+   abc
+   def
+   </pre>
+   xxx <br/>
+   yyy
 </body>
 </html>
