--- a/tp/contact.html
+++ b/tp/contact.html
@@ -10,9 +10,18 @@
      <li><a href="#milieu">vers milieu , &eacute;</a></li>
      <li><a href="#fin">vers fin</a></li>
    </ul>
-   <p>...</p> <p>...</p>  <p>...</p><p>...</p>  <p>...</p>
-   <p>...</p> <p>...</p>  <p>...</p><p>...</p>  <p>...</p>
-   <p>...</p> <p>...</p>  <p>...</p><p>...</p>  <p>...</p>
+   <!-- habituellement action="urlCoteServeur"
+        ici action="#" pour cours html simplifié sans java ni php -->
+   <form action="#" method="get" >
+    nom : <input type="text" name="nom" /> <br/>
+	prenom : <input type="text" name="prenom" /> <br/>
+	sujet : <input type="text" name="sujet" /> <br/>
+	question : <input type="text" name="question" /> <br/>
+	<!-- bouton poussoir avec type="submit" value="envoyer" -->
+	     <input type="submit" value="envoyer infos contact" />
+   </form>
+   
+   
    <a name="milieu">milieu</a>
     <p>...</p> <p>...</p>  <p>...</p><p>...</p>  <p>...</p>
    <p>...</p> <p>...</p>  <p>...</p><p>...</p>  <p>...</p>
