--- a/exemples/ex-html5/formulaire_secondaire_html5.html
+++ b/exemples/ex-html5/formulaire_secondaire_html5.html
@@ -1,19 +1,18 @@
 <html>
 <body>
-<form  >
-
+<form>
 Birthday (month and year): <input type="month" name="bdaymonth"/> <br/>
-
 <input type='submit' />
 </form>
 
 <hr/>
-<form oninput="x.value=parseInt(a.value)+parseInt(b.value)">
-0<input type="range" id="a" value="50">100 +
-<input type="number" id="b" value="50">= <output name="x" for="a b" />
+<form oninput="x.value=parseInt(a.value)+parseInt(b.value)" >
+0<input type="range" id="a" value="50" min="0" max="100">100 <br/>
++<input type="number" id="b" value="50" /> <br/>
+= <output name="x" for="a b" />
 </form>
 
 
 
-</body
+</body>
 </html>
