--- a/tp/index.html
+++ b/tp/index.html
@@ -11,6 +11,7 @@
     
    <a href="contact.html"> contact </a>	<br/>
    <a href="tableau.html"> tableau </a>	<br/>
+   <a href="media.html"> audio et video </a>	<br/>
    <a href="http://www.m2iformation.fr" target="_blank"> M2i formation </a>	<br/>
    <div style="font-weight:bold">
 	   <h2>principales couleurs</h2>
