--- a/tp/contact.html
+++ b/tp/contact.html
@@ -14,12 +14,12 @@
         ici action="#" pour cours html simplifié sans java ni php -->
    <form action="#" method="get" enctype="multipart/form-data">
     <label for="nom">nom :</label> 
-	<input type="text" name="nom" 
+	<input type="text" name="nom" size="48"
 	             placeholder="nom requis" 
 				 pattern="[A-Z].+"	required /> <br/>
 				 
 	<label for="prenom">prenom :</label> 
-	<input type="text" name="prenom" required minlength='3' />
+	<input type="text" name="prenom" required minlength='2' />
 	        <!-- <input type="text" name="prenom" required minlength='3'
 	                oninvalid="this.setCustomValidity('Au moins 3 caracteres')"
                     oninput="this.setCustomValidity('')"/> --> <br/>
