--- a/tp/media.html
+++ b/tp/media.html
@@ -22,9 +22,13 @@
 	ne supportant pas la balise video HTML5
 	possibilite d'imbriquer ici balise object (en plan B)
 	pour anciens navigateurs
+	    <object  width='400' height='400'
+           type="video/mp4" data="video/video2.mp4"
+        />
+  </video>
   </video>
   <hr/>
-  <h3>Video via balise object (ok with ie,edge,chrome,not frirefox):<h3>
+  <h3>Video via balise object (ok with ie,edge,chrome,not firefox):<h3>
   <object  width='400' height='400'
            type="video/mp4" data="video/video2.mp4"
   />
