--- a/tp/index.html
+++ b/tp/index.html
@@ -2,13 +2,23 @@
 <html>
 <head>
  <title>index</title>
- <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+ <link rel="stylesheet" type="text/css" href="css/styles.css" />
+ <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body>
-   <h1>Bienvenue dans la formation <i>HTML5</i> / CSS3</h1>  
+  <header>
+   <h1>Bienvenue dans la formation <i>HTML5</i> / CSS3</h1> 
+  </header> 
+  <section id="idSection1">  
    <h2>sous titre</h2>
    <p> ligne1 du paragraphe <br/> ligne2 du pragraphe </p>
-    
+   <p id="idP1">paragraphe 1</p>
+   <p id="idP2">paragraphe 2</p>
+   <p class="enEvidence">paragraphe 3</p>
+   <p >paragraphe 4</p>
+   <p >paragraphe 5</p>
+   <div class="enEvidence"> texte de div </div>
+</section>
    <a href="contact.html"> contact </a>	<br/>
    <a href="tableau.html"> tableau </a>	<br/>
    <a href="media.html"> audio et video </a>	<br/>
@@ -25,6 +35,9 @@
    <hr/>
    <div style="color:red;font-style:italic">divA</div><div>divB</div>
    <span>spanA</span><span style="color:green" >spanB</span>
+   <footer>
+       mentions légales , liens vers site externes
+   </footer>
    
 </body>
 </html>
