--- a/tp/contact.html
+++ b/tp/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
  <title>contact</title>
+ <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
    page contact
