--- a/tp/contact.html
+++ b/tp/contact.html
@@ -2,10 +2,10 @@
 <html>
 <head>
  <title>contact</title>
- <link rel="stylesheet" type="text/css" href="css/styles.css" />
+ <link rel="stylesheet" type="text/css" href="css/styles2.css" />
 </head>
 <body>
-   page contact
+   <p class="enEvidence">page contact</p>
    <ul>
      <li><a href="index.html">retour index</a></li>
      <li><a href="#milieu">vers milieu , &eacute;</a></li>
