--- a/tp/index.html
+++ b/tp/index.html
@@ -3,6 +3,9 @@
 <head>
  <title>index</title>
  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+ <style type="text/css">
+    a { font-style : italic ; }
+ </style>
  <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body>
@@ -31,6 +34,14 @@
 			<li>bleu</li>
 			<!-- commentaire au sein d'une page html -->
 	   </ul>
+	   
+	    <h2>principaux pays</h2>
+	   <ol>
+			<li>USA</li>	
+			<li>France</li>	
+			<li>Allemagne</li>
+			<!-- commentaire au sein d'une page html -->
+	   </ol>
    </div>
    <hr/>
    <div style="color:red;font-style:italic">divA</div><div>divB</div>
