--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -15,8 +15,10 @@
 			<tr>                                <th>essentiel</th><th>detail</th></tr>
 		  </thead>
 		  <tbody>
-			<tr><td>html</td><td>page web </td><td>hypertexte </td></tr>
-			<tr><td>http</td><td>protocole</td><td>reseau</td></tr>
+			<tr class="impair"><td>html</td><td>page web </td><td>hypertexte </td></tr>
+			<tr class="pair"><td>http</td><td>protocole</td><td>reseau</td></tr>
+			<tr class="impair"><td>css</td><td>feuille de styles </td><td>en cascade </td></tr>
+			<tr class="pair"><td>javascript</td><td>langage</td><td>interprété</td></tr>
 		  </tbody>
 	   </table>
   </div>
