--- a/tp/contact.html
+++ b/tp/contact.html
@@ -2,6 +2,9 @@
 <html>
 <head>
  <title>contact</title>
+  <!-- nb meta name="viewport" content="width=device-width, initial-scale=1"
+       est indispensable pour comportement "responsive" sur smartphone -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" type="text/css" href="css/styles2.css" />
 </head>
 <body>
@@ -42,8 +45,8 @@
 				<option selected >suggestion</option>
              </select> 	<br/>
 			 
-		<label>publicité demandée :</label> 
-		<input type="checkbox" name="pub" value="oui" /> <br/>
+		<label>publicité :</label> 
+		<input type="checkbox" name="pub" value="oui" />demandée  <br/>
 		
 		<label>question :</label> 
 		<textarea name="question" > 
