--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -37,5 +37,9 @@
    </pre>
    xxx <br/>
    yyy
+   </hr>
+   <p class="withAlluraFont">
+   Paragraphe dans une police de caractère specifique (alluraregular)
+   </p>
 </body>
 </html>
