avec label de largeur controlee

--- a/exemples/ex-html5/essai_layout_semantique.html
+++ b/exemples/ex-html5/essai_layout_semantique.html
@@ -17,7 +17,7 @@
 <main>
 	<aside id="mainSideMenu">
 		<h4> (aside) sideMenu </h4>
-		<p> .... </p><p> .... </p><p> .... </p><p> .... </p>
+		<p>.... lien 1 blabla .... xxx .... lien 1 blabla .... xxx .... lien 1 blabla .... xxx  </p><p> .... lien 1 blabla .... xxx .... lien 1 blabla .... xxx .... lien 1 blabla .... xxx </p><p> .... </p><p> .... lien 1 blabla .... xxx .... lien 1 blabla .... xxx .... lien 1 blabla .... xxx </p>
 	</aside>
 
 	<section id="mainContent">
