--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -7,8 +7,14 @@
 <body>
    <h3>page avec tableau</h3>
    <div class="cadre auCentre">
+       <input type="button" value="cacher" 
+	          onclick="document.getElementById('tableau1').style.display='none'"
+	   />
+	   <input type="button" value="montrer" 
+	          onclick="document.getElementById('tableau1').style.display='block'"
+	   />
        <p class="auCentre">ligne au dessus du tableau</p>
-	   <table border="1" class="auCentre assezLarge" >
+	   <table id="tableau1" border="1" class="auCentre assezLarge" >
 		  <caption>titre du tableau</caption>
 		  <thead>
 			<tr><th rowspan="2">technologie</th><th colspan='2'>caracteristiques</th></tr>
@@ -29,6 +35,7 @@
         title="image1" />
    <hr/>
    <img src="images/image1.jpg" width="50px" height="50px" />
+   <b> texte1 blabla blaba </b>   <b> texte2 blabla blaba </b>  <b> texte3 blabla blaba </b>
    <hr/>
    <img src="images/scene.svg" />
    <pre>
