--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="css/styles2.css" />
  <title>tableau</title>
 </head>
 <body>
    <h3>page avec tableau</h3>
    <div class="cadre auCentre">
-       <input type="button" value="cacher" 
+       <input type="button" class="btn-primary" value="cacher" 
 	          onclick="document.getElementById('tableau1').style.display='none'"
 	   />
 	   <input type="button" value="montrer" 
@@ -31,8 +32,20 @@
    <hr/>
    <div id="divA"> texte qui va bien </div>
    <hr/>
-   <img src="images/image1.jpg" alt="texte alternatif image1" 
-        title="image1" />
+   
+   <div class="row">
+     <div class="col-sm-6">
+       <img src="images/image1.jpg" style="width:100%" alt="texte alternatif image1" 
+           title="image1" />
+	 </div>
+	 <div class="col-sm-6" style="text-align:center" >
+       ligne 1 <br/>
+	   ligne 2 <br/>
+	   ligne 3 <br/>
+	   ligne 4 <br/>
+	 </div> <!-- fin de col-sm6 -->
+   </div>		
+		
    <hr/>
    <img src="images/image1.jpg" width="50px" height="50px" />
    <b> texte1 blabla blaba </b>   <b> texte2 blabla blaba </b>  <b> texte3 blabla blaba </b>
