contact avec ou sans bootstrap

--- a/tp/tableau.html
+++ b/tp/tableau.html
@@ -3,6 +3,10 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="css/styles2.css" />
+<style type="text/css" >
+   .auCentre { text-align: center ; font-style : italic; 
+               color: blue }
+</style>
  <title>tableau</title>
 </head>
 <body>
@@ -38,7 +42,7 @@
        <img src="images/image1.jpg" style="width:100%" alt="texte alternatif image1" 
            title="image1" />
 	 </div>
-	 <div class="col-sm-6" style="text-align:center" >
+	 <div class="col-sm-6 auCentre" >
        ligne 1 <br/>
 	   ligne 2 <br/>
 	   ligne 3 <br/>
