--- a/tp/index.html
+++ b/tp/index.html
@@ -5,6 +5,7 @@
  <link rel="stylesheet" type="text/css" href="css/styles.css" />
  <style type="text/css">
     a { font-style : italic ; font-weight: bold;}
+	a:hover {  color : red; }
  </style>
  <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
